--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,10 @@ jobs:
         
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
+      with:
+        cmdline-tools-version: 8512546
+        accept-android-sdk-licenses: true
+        log-accepted-android-sdk-licenses: true
       
     - name: Install dependencies
       run: npm ci
