fix: corregir comando Gradle para Windows en package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alxjackson-eventos",
   "private": true,
-  "version": "2.0.4",
+  "version": "2.0.9",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,7 +19,7 @@
     "version:patch": "npm version patch --no-git-tag-version",
     "version:minor": "npm version minor --no-git-tag-version",
     "version:major": "npm version major --no-git-tag-version",
-    "release:android": "npm run build && cap sync && cd android && ./gradlew assembleRelease",
+    "release:android": "npm run build && cap sync && cd android && gradlew.bat assembleRelease",
     "release:full": "npm run version:patch && npm run release:android && node scripts/create-release.js"
   },
   "dependencies": {
