--- a/package.json
+++ b/package.json
@@ -93,5 +93,9 @@
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17",
     "vite": "^7.1.2"
+  },
+  "overrides": {
+    "picomatch": "^2.3.1",
+    "@rollup/rollup-linux-x64-gnu": "*"
   }
 }
