--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/node": "^22.12.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17",
