--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17",
+    "typescript": "^5.6.3",
     "vite": "^7.1.2"
   },
   "overrides": {
