Implement comprehensive Java 17 enforcement solution
- Added gradle.properties with forced Java 17 configuration
- Modified build.gradle to override Java version for all subprojects
- Enhanced GitHub Actions workflow with explicit Java toolchain parameters
- This should definitively resolve the 'invalid source release: 21' error
- All Gradle builds will now use Java 17 regardless of auto-generated files

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,9 @@ jobs:
         cd android
         chmod +x ./gradlew
         export JAVA_HOME=$JAVA_HOME
-        ./gradlew assembleRelease --info
+        export ORG_GRADLE_PROJECT_java_sourceCompatibility=17
+        export ORG_GRADLE_PROJECT_java_targetCompatibility=17
+        ./gradlew assembleRelease --info -Dorg.gradle.java.home=$JAVA_HOME
         
     - name: Get version from tag
       id: get_version
