Add aggressive Java 17 enforcement for GitHub Actions
- Added post-sync script to force replace Java 21 with Java 17 in all generated files
- Uses sed to replace VERSION_21 with VERSION_17 in all .gradle files
- Adds Java 17 configuration directly to gradle.properties after generation
- Includes verification step to confirm no Java 21 references remain
- This brute-force approach should finally resolve the Capacitor 7.x Java version bug

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,24 @@ jobs:
     - name: Sync Capacitor
       run: npx cap sync android
       
+    - name: Force Java 17 in generated files
+      run: |
+        # Force Java 17 in all auto-generated gradle files
+        find android -name "*.gradle" -type f -exec sed -i 's/JavaVersion\.VERSION_21/JavaVersion.VERSION_17/g' {} \;
+        find android -name "*.gradle" -type f -exec sed -i 's/VERSION_21/VERSION_17/g' {} \;
+        
+        # Add Java 17 enforcement to gradle.properties
+        echo "" >> android/gradle.properties
+        echo "# Force Java 17 for CI" >> android/gradle.properties
+        echo "java.sourceCompatibility=17" >> android/gradle.properties
+        echo "java.targetCompatibility=17" >> android/gradle.properties
+        
+        # Verify changes
+        echo "=== Checking for Java 21 references ==="
+        grep -r "21" android/ --include="*.gradle" || echo "No Java 21 references found"
+        echo "=== gradle.properties content ==="
+        cat android/gradle.properties
+      
     - name: Build Android APK
       run: |
         cd android
